force-app/main/default/objects/Holded_Account__mdt/Holded_Account__mdt.object-meta.xml
<CustomObject>
    <label>Holded Account</label>
    <pluralLabel>Holded Accounts</pluralLabel>
</CustomObject>