force-app/main/default/objects/Holded_Account__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <type>Text</type>
    <length>80</length>
</CustomField>