force-app/main/default/objects/Holded_Account__mdt/fields/Services_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Services_Account_Id__c</fullName>
    <label>Services Account Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>