force-app/main/default/objects/Holded_Account__mdt/fields/Tickets_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Account_Id__c</fullName>
    <label>Tickets Account Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>